--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,8 +15,8 @@
 </head>
 
   <body>
-<header>
-  <nav>  
+<header class = "headerBox">
+  <nav class = "navBox">  
     <a>Services </a>
     <a>Product</a>
     <a>Vision</a>
@@ -29,37 +29,45 @@
 
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
   
-  <h1>
-    Innovation
-    On
-    Demand
-  </h1>
-  <button>Get Started</button>
-
-  <img src="img/header-img.png" alt="Image of a code snippet.">
+  <div id= "tagLineBox">
+    <h1>
+      Innovation<br>
+      On<br>
+      Demand
+    </h1>
+    <button>Get Started</button>
+  </div>
+  <img id = "circleCode"src="img/header-img.png" alt="Image of a code snippet.">
 </header>
 
 <hr>
 
 <section>  
-  <h4>Features</h4>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-
-
-  <h4>About</h4>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-
+  <div id = "featuresBox">
+    <h4>Features</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+  
+  <div id = "aboutBox">
+    <h4>About</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+  
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
- <h4>Services</h4>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-
-
-  <h4>Product</h4>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  <div id = "servicesBox">
+    <h4>Services</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
+  <div id= "productsBox">
+    <h4>Product</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
   
-  <h4>Vision</h4>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  <div id = "visionBox">
+    <h4>Vision</h4>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
 </section>
   
 <hr>
