--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,15 +16,16 @@
 
   <body>
 <header class = "headerBox">
-  <nav class = "navBox">  
-    <a>Services </a>
-    <a>Product</a>
-    <a>Vision</a>
-    <a>Features</a>
-    <a>About</a>
-    <a>Contact</a>
-  </nav>
-
+  <div id = "navBox">
+    <nav>  
+      <a>Services </a>
+      <a>Product</a>
+      <a>Vision</a>
+      <a>Features</a>
+      <a>About</a>
+      <a>Contact</a>
+    </nav>
+  </div>
   
 
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
@@ -72,13 +73,13 @@
   
 <hr>
 
-<section>
+<section class="footerSection">
   <h4>Contact</h4>
   <address>
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+  <p>123 Way 456 Street</p>
+  <p>Somewhere, USA</p>
+  <p>(888) 888-8888</p> 
+  <p>sales@greatidea.io</p>
   </address>
   <p class="copyright">&copy;Copyright Great Idea! 2018</p>
 </section> 
